fixing spacing

--- a/src/components/PinterestGallery.css
+++ b/src/components/PinterestGallery.css
@@ -1,6 +1,7 @@
 .pinterest-gallery {
   width: 100%;
   padding: 20px;
+  padding-right: 40px; /* Just a small buffer for music player */
   margin: 0 auto;
   max-width: 1400px;
 }
@@ -76,6 +77,7 @@
 @media (max-width: 1200px) {
   .pinterest-gallery {
     padding: 15px;
+    padding-right: 35px; /* Small buffer */
   }
   
   .pinterest-columns {
@@ -90,6 +92,7 @@
 @media (max-width: 768px) {
   .pinterest-gallery {
     padding: 10px;
+    padding-right: 30px; /* Small buffer */
   }
   
   .pinterest-columns {
@@ -114,6 +117,10 @@
 }
 
 @media (max-width: 480px) {
+  .pinterest-gallery {
+    padding-right: 25px; /* Small buffer */
+  }
+  
   .pinterest-columns {
     flex-direction: column;
   }
